# tribalmemory-bench

./: .gitignore  CLAUDE.md  README.md  package-lock.json  pyproject.toml
benchmarks/: __init__.py  cli.py
benchmarks/convomem/: __init__.py  harness.py
benchmarks/longmemeval/: __init__.py  harness.py
benchmarks/shared/: __init__.py  checkers.py  metrics.py  providers.py  runner.py  scenario_runner.py
scenarios/: README.md
scenarios/negative/: stale_rejection_001.yaml
scenarios/negative/abstention/: _convomem.yaml  convomem_sample.yaml
scenarios/privacy/: cross_user_isolation.yaml
scenarios/temporal/: preference_update.yaml
scripts/: extract_abstention.py  extract_convomem_abstention.py  inspect_convomem.py  inspect_convomem2.py  sample_convomem.py
src/providers/: index.ts
src/providers/tribalmemory/: index.ts
src/types/: provider.ts
src/utils/: config.ts
tests/: __init__.py  test_checkers.py  test_longmemeval.py  test_metrics.py  test_providers.py  test_runner.py  test_scenario_runner.py
