[project]
name = "tribalmemory-bench"
version = "0.1.0"
description = "Benchmark suite for conversational memory systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "datasets>=2.0.0",  # For HuggingFace dataset loading
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
tribench = "benchmarks.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmarks"]
