[project]
name = "tribalmemory-bench"
version = "0.1.0"
description = "Benchmark suite for conversational memory systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "datasets>=2.0.0",
    "pyyaml>=6.0",
    "aiofiles>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]
fuzzy = [
    "rapidfuzz>=3.0.0",  # For fuzzy matching
]

[project.scripts]
tribench = "benchmarks.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmarks"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.coverage.run]
source = ["benchmarks"]
omit = ["tests/*"]
